--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ hash_behaviour=merge
 callback_whitelist=profile_tasks
 remote_tmp=~/.ansible/tmp
 collections_paths=~/.ansible/collections:../../../
+roles_path=roles/common:roles/control_center:roles/kafka_broker:roles/kafka_connect:roles/kafka_connect_replicator:roles/kafka_rest:roles/kerberos:roles/ksql:roles/schema_registry:roles/ssl:roles/variables:roles/zookeeper
 
 [ssh_connection]
 pipelining = True
